--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.h2.console.enabled=true
+#for debug mode
+#logging.level.org.springframework = debug
 
+#for h2 database
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
